k8s/deployment-local.yaml
# 本地部署使用
apiVersion: v1
kind: Service
metadata:
  name: openobserve
  namespace: openobserve
spec:
  clusterIP: None
  selector:
    app: openobserve
  ports:
    - name: http
      port: 5080
      targetPort: 5080

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: openobserve
  namespace: openobserve
  labels:
    name: openobserve
spec:
  serviceName: openobserve
  replicas: 1
  selector:
    matchLabels:
      name: openobserve
      app: openobserve
  template:
    metadata:
      labels:
        name: openobserve
        app: openobserve
    spec:
      securityContext:
        fsGroup: 2000
        runAsUser: 10000
        runAsGroup: 3000
        runAsNonRoot: true
      containers:
        - name: openobserve
          image: public.ecr.aws/zinclabs/openobserve:v0.90.3
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              cpu: "4"
              memory: 8Gi
            requests:
              cpu: '1'
              memory: 2Gi
          livenessProbe:
            httpGet:
              path: /healthz
              port: 5080
            initialDelaySeconds: 60
            periodSeconds: 20
            timeoutSeconds: 20
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /healthz
              port: 5080
            initialDelaySeconds: 60
            periodSeconds: 20
            timeoutSeconds: 20
            failureThreshold: 3
          ports:
            - containerPort: 5080
              name: http
          volumeMounts:
            - name: data
              mountPath: /data
      volumes:
        - name: data
          emptyDir: {}
