k8s/lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: openobserve-lb
  namespace: openobserve
spec:
  type: LoadBalancer
  selector:
    app: openobserve
  ports:
    - port: 5080
      targetPort: 5080
